<resources>
    <string name="app_name">PokeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_text">Ha ocurrido un error</string>
    <string name="trainer">Entrenador</string>
    <string name="Male">Hombre</string>
    <string name="Female">Mujer</string>
    <string name="Login">Ingresar</string>
    <string name="All">Todos</string>
    <string name="Favorites">Favoritos</string>
    <string name="Detail">Detalle</string>
    <string name="Pokemon">Pokémon</string>
    <string name="Sex">Sexo</string>
    <string name="AddFav">Añadido a favoritos</string>
    <string name="DltFav">Removido de favoritos</string>
    <string name="PokemonNumber">Número de pokémon:</string>
    <string name="PokeId">Pokémon ID:</string>
    <string name="PokeExp">Experiencia Base:</string>
    <string name="PokeHeight">Altura:</string>
    <string name="PokeWeight">Peso:</string>
    <string name="PokeMove">Movimiento:</string>
    <string name="PokeStat">Estadística:</string>
    <string name="PokeType">Tipo:</string>
    <string name="stat">Stat:</string>
    <string name="Efford">Esfuerzo:</string>
    <string name="alreadyAdded">Pokémon ya ha sido añadido</string>
    <string name="Fav">Favoritos</string>
    <string name="RemovePoke">Remover pokémon?</string>
    <string name="Yes">Si</string>
    <string name="Cancel">Cancelar</string>
    <string name="Accept">Aceptar</string>
</resources>